--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <ul>
             <li><a href="#About">About</a></li>
             <li><a href="#Skills">Skills</a></li>
-            <!-- <li><a href="#projects">Projects</a></li> -->
+            <li><a href="#projects">Projects</a></li> 
             <li><a href="#experience">Experience</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#Contact">Contact</a></li>
