--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <p>I enjoy learning new skills and implementing them in real life which can serve the community in any possible way.
                     I believe in community-building and collaboration.</p>
                     <div class="abc">
-                        <a href="https://drive.google.com/file/d/1jochTO4s0PFz9vNvoe_26m-U9o3Un1AE/view?usp=sharing"target="_blank"><button>View Resume</button></a>
+                        <a href="https://drive.google.com/file/d/1LG8EtDorsJmBwvksPGisPT3R4n9LsePG/view?usp=drive_link"target="_blank"><button>View Resume</button></a>
                     </div>
             </div>
             
